--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
               Sign up for updates about our newest game <strong>Yes, Chef!</strong> We'll never bother you about non-game stuff and we'll never sell your information.
             </p>
           </div>
-          <form action="#" class="mt-12 sm:mx-auto sm:max-w-lg sm:flex">
+          <form action="#" class="mt-12 sm:mx-auto sm:max-w-lg sm:flex" netlify>
             <div class="min-w-0 flex-1">
-              <label for="cta_email" class="sr-only">Email address</label>
-              <input id="cta_email" type="email" class="block w-full border border-transparent rounded-md px-5 py-3 text-base text-gray-900 placeholder-gray-500 shadow-sm focus:outline-none focus:border-transparent focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600" placeholder="Enter your email">
+              <label for="cta_email" name="email" class="sr-only">Email address</label>
+              <input id="cta_email" name="email" type="email" class="block w-full border border-transparent rounded-md px-5 py-3 text-base text-gray-900 placeholder-gray-500 shadow-sm focus:outline-none focus:border-transparent focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600" placeholder="Enter your email">
             </div>
             <div class="mt-4 sm:mt-0 sm:ml-3">
               <button type="submit" class="block w-full rounded-md border border-transparent px-5 py-3 bg-indigo-500 text-base font-medium text-white shadow hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600 sm:px-10">Notify me</button>
