--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -202,7 +202,7 @@
 <footer class="bg-orange-light">
   <div class="max-w-5xl mx-auto flex justify-between py-12 px-4 sm:py-16 sm:px-6 lg:px-8">
   <p>&copy; 2022 Superfun</p>
-  <p><a class="underline underline-offset-2" href="#contact">Contact</a></p>
+  <p><a class="underline underline-offset-2" href="mailto:clark@superfun.team">Contact</a></p>
   </div>
 </footer>
 
