--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="deck px-24 text-center pb-24 md:w-1/2">
-    <img src="images/card-back.png" class="drop-shadow-2xl mb-8 md:px-16" alt="">
+    <img src="images/card-back.png" class="back drop-shadow-2xl mb-8 relative z-10 inline-block" alt="">
     <img src="images/game-meta.svg" class="inline" alt="">
   </div>
 
@@ -39,8 +39,8 @@
 
   </div>
 
-  <div class="play how-to">
-    <div class="container mx-auto text-center">
+  <div class="play how-to md:absolute md:top-8 md:right-3/4 md:left-0 md:pt-14 z-0">
+    <div class="container mx-auto text-center md:hidden">
     <h2 class="text-xs text-red font-bold">HOW TO PLAY</h2>
     <p class="text-2xl font-semibold mb-4">Let’s get cooking!</p>
     </div>
