--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -30,9 +30,9 @@
   </div>
   </div>
 
-  <div class="deck px-24 text-center pb-24 md:w-1/2">
-    <img src="images/card-back.png" class="back drop-shadow-2xl mb-8 relative z-10 inline-block" alt="">
-    <img src="images/game-meta.svg" class="inline" alt="">
+  <div class="deck px-12 md:px-24 text-center pb-24 md:w-1/2">
+    <img src="images/card-back.png" class="back drop-shadow-2xl mb-8 w-full relative z-10 inline-block" alt=""><br>
+    <img src="images/game-meta.svg" class="inline-block" alt="">
   </div>
 
   </div>
@@ -64,31 +64,31 @@
   </marquee>
   </div>
 
-  <div class="feature one mx-auto md:flex justify-items-center mb-16 px-12 text-center">
-    <div class="container mx-auto md:flex md:items-center">
+  <div class="feature one max-w-6xl mx-auto md:flex justify-items-center mb-16 px-12 lg:px-0 text-center">
+    <div class="container lg:w-5/12 mx-auto md:flex md:items-center lg:px-20">
       <div><h3 class="text-2xl font-semibold mb-2">Match ingridients to recipes</h3>
       <p>Draw cards and make sets worth the most coins to win the game.</p>
     </div>
     </div>
-    <img src="images/cards-match.png" alt="">
+    <img class="lg:w-7/12" src="images/cards-match.png" alt="">
   </div>
 
-  <div class="feature two mx-auto md:flex mb-16 px-12 text-center">
-    <div class="container md:flex md:items-center order-last">
+  <div class="feature two max-w-6xl mx-auto md:flex mb-16 px-12 lg:px-0 text-center">
+    <div class="container lg:w-5/12 md:flex md:items-center lg:px-20 order-last">
       <div><h3 class="text-2xl font-semibold mb-2">Spoil the other chefs</h3>
       <p>Use action cards to steal ingredients, leave bad reviews on Whelp, or pocket some extra coin.</p>
     </div>
     </div>
-    <img src="images/cards-action.png" alt="">
+    <img class="lg:w-7/12" src="images/cards-action.png" alt="">
   </div>
 
-  <div class="feature three mx-auto md:flex mb-16 px-12 text-center">
-    <div class="container md:flex md:items-center">
+  <div class="feature three max-w-6xl mx-auto md:flex mb-16 px-12 lg:px-0 text-center">
+    <div class="container lg:w-5/12 md:flex md:items-center lg:px-20">
       <div><h3 class="text-2xl font-semibold mb-2">Become the best</h3>
       <p>Complete 3 dishes worth the most coins and you win!</p>
     </div>
     </div>
-    <img src="images/cards-done.png" alt="">
+    <img class="lg:w-7/12" src="images/cards-done.png" alt="">
   </div>
 
   <div class="cta bg-red">
