--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -16,7 +16,7 @@
   
   <div class="hero">
 
-    <div class="tophat lg:w-1/2 ml-auto text-sm text-center pt-3 pb-6 text-white mb-8">
+    <div class="tophat md:w-1/2 ml-auto text-sm text-center pt-3 pb-6 text-white mb-8">
       <strong>Superfun Games</strong> presents <img src="images/logo-small-white.svg" class="inline" alt="">
     </div>
 
@@ -65,30 +65,30 @@
   </div>
 
   <div class="feature one max-w-6xl mx-auto md:flex justify-items-center mb-16 px-12 lg:px-0 text-center">
-    <div class="container lg:w-5/12 mx-auto md:flex md:items-center lg:px-20">
+    <div class="container md:w-5/12 mx-auto md:flex md:items-center md:px-8 lg:px-20">
       <div><h3 class="text-2xl font-semibold mb-2">Match ingridients to recipes</h3>
       <p>Draw cards and make sets worth the most coins to win the game.</p>
     </div>
     </div>
-    <img class="lg:w-7/12" src="images/cards-match.png" alt="">
+    <img class="md:w-7/12" src="images/cards-match.png" alt="">
   </div>
 
   <div class="feature two max-w-6xl mx-auto md:flex mb-16 px-12 lg:px-0 text-center">
-    <div class="container lg:w-5/12 md:flex md:items-center lg:px-20 order-last">
+    <div class="container md:w-5/12 md:flex md:items-center md:px-8 lg:px-20 order-last">
       <div><h3 class="text-2xl font-semibold mb-2">Spoil the other chefs</h3>
       <p>Use action cards to steal ingredients, leave bad reviews on Whelp, or pocket some extra coin.</p>
     </div>
     </div>
-    <img class="lg:w-7/12" src="images/cards-action.png" alt="">
+    <img class="md:w-7/12" src="images/cards-action.png" alt="">
   </div>
 
   <div class="feature three max-w-6xl mx-auto md:flex mb-16 px-12 lg:px-0 text-center">
-    <div class="container lg:w-5/12 md:flex md:items-center lg:px-20">
+    <div class="container md:w-5/12 md:flex md:items-center md:px-8 lg:px-20">
       <div><h3 class="text-2xl font-semibold mb-2">Become the best</h3>
       <p>Complete 3 dishes worth the most coins and you win!</p>
     </div>
     </div>
-    <img class="lg:w-7/12" src="images/cards-done.png" alt="">
+    <img class="md:w-7/12" src="images/cards-done.png" alt="">
   </div>
 
   <div class="cta bg-red">
@@ -200,7 +200,7 @@
 </div>
 
 <footer class="bg-orange-light">
-  <div class="max-w-5xl mx-auto flex justify-between py-12 px-4 sm:py-16 sm:px-6 lg:px-8">
+  <div class="max-w-5xl mx-auto flex justify-between py-8 pb-48 px-4 sm:px-6 lg:px-8">
   <p>&copy; 2022 Superfun</p>
   <p><a class="underline underline-offset-2" href="mailto:clark@superfun.team">Contact</a></p>
   </div>
