--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -203,7 +203,7 @@
   <div class="flex gap-5 pt-8">
     <div class="one grow">
       <a class="block underline decoration-2 decoration-red-500 underline-offset-2 mb-4" href="#">About Us</a>
-      <a class="block underline decoration-2 decoration-red-500 underline-offset-2 mb-4" href="#">The Deck</a>
+      <a class="block underline decoration-2 decoration-red-500 underline-offset-2 mb-4" href="deck.html">The Deck</a>
       <a class="block underline decoration-2 decoration-red-500 underline-offset-2 mb-4" href="#">Contact</a>
 
     </div>
