--- a/yes-chef/deck.html
+++ b/yes-chef/deck.html
@@ -22,9 +22,9 @@
 
   </div>
   
-<div class="container max-w-3xl mx-auto">
+<div class="container max-w-3xl mx-auto px-8">
 
-  <h1 class="text-7xl mb-12 font-medium ">The<br>Complete<br>Deck</h1>
+  <h1 class="text-4xl md:text-7xl mb-12 font-medium ">The<br>Complete<br>Deck</h1>
   
   <!-- card -->
   <div class="card flex gap-8 border-b-2 py-8">
