--- a/index.html
+++ b/index.html
@@ -7,72 +7,35 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="stylesheet" href="css/main.css">
   <title>Superfun Games</title>
-</head>
-<body class="antialiased grid h-full content-center">
-  
 
-<!--
-  This example requires Tailwind CSS v2.0+ 
-  
-  This example requires some changes to your config:
-  
-  ```
-  // tailwind.config.js
-  module.exports = {
-    // ...
-    plugins: [
-      // ...
-      require('@tailwindcss/forms'),
-    ]
-  }
-  ```
--->
-<div class="bg-white py-16 sm:py-24">
-  <div class="relative sm:py-16">
-    <div aria-hidden="true" class="hidden sm:block">
-      <div class="absolute inset-y-0 left-0 w-1/2 bg-gray-50 rounded-r-3xl"></div>
-      <svg class="absolute top-8 left-1/2 -ml-3" width="404" height="392" fill="none" viewBox="0 0 404 392">
-        <defs>
-          <pattern id="8228f071-bcee-4ec8-905a-2a059a2cc4fb" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-            <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor" />
-          </pattern>
-        </defs>
-        <rect width="404" height="392" fill="url(#8228f071-bcee-4ec8-905a-2a059a2cc4fb)" />
-      </svg>
-    </div>
-    <div class="mx-auto max-w-md px-4 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8">
-      <div class="relative rounded-2xl px-6 py-10 bg-red-600 overflow-hidden shadow-xl sm:px-12 sm:py-20">
-        <div aria-hidden="true" class="absolute inset-0 -mt-72 sm:-mt-32 md:mt-0">
-          <svg class="absolute inset-0 h-full w-full" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 1463 360">
-            <path class="text-indigo-500 text-opacity-40" fill="currentColor" d="M-82.673 72l1761.849 472.086-134.327 501.315-1761.85-472.086z" />
-            <path class="text-indigo-700 text-opacity-40" fill="currentColor" d="M-217.088 544.086L1544.761 72l134.327 501.316-1761.849 472.086z" />
-          </svg>
-        </div>
-        <div class="relative">
-          <div class="sm:text-center">
-            <h2 class="text-3xl font-extrabold text-white tracking-tight sm:text-4xl">
-              Superfun Games are coming super soon.
-            </h2>
-            <p class="mt-6 mx-auto max-w-2xl text-lg text-white">
-              Sign up for updates about our newest game <strong>Yes, Chef!</strong> We'll never bother you about non-game stuff and we'll never sell your information.
-            </p>
-          </div>
-          <form action="#" class="mt-12 sm:mx-auto sm:max-w-lg sm:flex" netlify>
-            <div class="min-w-0 flex-1">
-              <label for="cta_email" name="email" class="sr-only">Email address</label>
-              <input id="cta_email" name="email" type="email" class="block w-full border border-transparent rounded-md px-5 py-3 text-base text-gray-900 placeholder-gray-500 shadow-sm focus:outline-none focus:border-transparent focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600" placeholder="Enter your email">
-            </div>
-            <div class="mt-4 sm:mt-0 sm:ml-3">
-              <button type="submit" class="block w-full rounded-md border border-transparent px-5 py-3 bg-indigo-500 text-base font-medium text-white shadow hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600 sm:px-10">Notify me</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+  <style>
+
+</style>
+</head>
+<body class="antialiased md:grid md:h-full md:content-center">
+
+<div class="logo px-12 text-center mt-12 md:mt-0">
+<img src="images/logo-superfun-games.svg" class="w-32 inline mb-8" alt="">
 </div>
 
-
+<div class="games whitespace-nowrap overflow-scroll font-semibold px-12 text-center">
+  <a class="inline-block p-4" href="/yes-chef">
+  <img src="images/box-yes-chef.webp" class="w-64 mb-4 shadow-xl rounded-lg" alt="">
+  <p>Check it out →</p>
+  </a> 
+  <a class="inline-block p-4 cursor-default" href="#">
+  <img src="images/box-pickleball-panic.webp" class="w-64 mb-4 shadow-xl rounded-lg" alt="">
+  <p>Coming soon</p>
+  </a>
+  <a class="inline-block p-4 cursor-default" href="#"> 
+  <img src="images/box-out-yonder.webp" class="w-64 mb-4 shadow-xl rounded-lg" alt=""> 
+  <p>Coming soon</p>
+  </a>
+  <a class="inline-block p-4 cursor-default" href="#">
+  <img src="images/box-boss-battle.webp" class="w-64 mb-4 shadow-xl rounded-lg" alt="">
+  <p>Coming soon</p>
+  </a>
+</div>
 
 </body>
 </html>
