--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
   <link rel="stylesheet" href="css/main.css">
   <title>Superfun Games</title>
 
+  
+  <!-- HTML Meta Tags -->
+  <title>Superfun Games</title>
+  <meta name="description" content="We make fun games.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://games.superfun.team/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Superfun Games">
+  <meta property="og:description" content="We make fun games.">
+  <meta property="og:image" content="https://games.superfun.team/images/overview.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="games.superfun.team">
+  <meta property="twitter:url" content="https://games.superfun.team/">
+  <meta name="twitter:title" content="Superfun Games">
+  <meta name="twitter:description" content="We make fun games.">
+  <meta name="twitter:image" content="https://games.superfun.team/images/overview.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+        
+
   <style>
 
 </style>
