--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -11,6 +11,29 @@
   <link rel="stylesheet" href="css/main.css">
   <title>Yes, Chef! The Cooking Card Game</title>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+
+  
+  <!-- HTML Meta Tags -->
+  <title>Yes, Chef! The Cooking Card Game</title>
+  <meta name="description" content="Order up! Collect ingredients and match recipes in an epic chef battle.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://games.superfun.team/yes-chef/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Yes, Chef! The Cooking Card Game">
+  <meta property="og:description" content="Order up! Collect ingredients and match recipes in an epic chef battle.">
+  <meta property="og:image" content="https://games.superfun.team/yes-chef/images/social.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="games.superfun.team">
+  <meta property="twitter:url" content="https://games.superfun.team/yes-chef/">
+  <meta name="twitter:title" content="Yes, Chef! The Cooking Card Game">
+  <meta name="twitter:description" content="Order up! Collect ingredients and match recipes in an epic chef battle.">
+  <meta name="twitter:image" content="https://games.superfun.team/yes-chef/images/social.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+        
 </head>
 <body class="antialiased">
   
