--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -12,7 +12,7 @@
   <title>Yes, Chef! The Cooking Card Game</title>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
 
-  
+
   <!-- HTML Meta Tags -->
   <title>Yes, Chef! The Cooking Card Game</title>
   <meta name="description" content="Order up! Collect ingredients and match recipes in an epic chef battle.">
@@ -131,8 +131,8 @@
 
 <div class="">
   <div class="max-w-5xl mx-auto py-12 sm:py-16 px-8">
-    <div class="flex gap-40">
-      <h2 class="text-4xl font-semibold text-gray-900 sm:text-4xl">Burning <br/>Questions</h2>
+    <div class="md:flex md:gap-40">
+      <h2 class="text-4xl font-semibold text-gray-900 sm:text-4xl mb-8">Burning <br/>Questions</h2>
     
       <div class="divide-y-2 divide-gray-200 w-full">
         <dl class="space-y-6 divide-y divide-gray-200">
