--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -54,8 +54,16 @@
   </div>
   </div>
 
-  <div class="deck px-12 md:px-24 text-center pb-24 md:w-1/2">
-    <img src="images/card-back.png" class="back drop-shadow-2xl mb-4 w-full relative z-10 inline-block" alt=""><br>
+  <div class="deck px-12 pt-20 md:pt-10 md:px-24 text-center pb-24 md:w-1/2">
+    <div class="scene">
+    <div class="box z-10">
+        <div class="box__face box__face--front"></div>
+        <div class="box__face box__face--back"></div>
+        <div class="box__face box__face--right"></div>
+        <div class="box__face box__face--left"></div>
+    </div>
+    </div>
+    <br>
     <img src="images/game-meta.svg" class="inline-block" alt="">
   </div>
 
@@ -90,7 +98,7 @@
 
   <div class="feature one max-w-6xl mx-auto md:flex justify-items-center mb-16 text-center overflow-hidden md:overflow-visible">
     <div class="container md:w-5/12 mx-auto md:flex md:items-center px-8 lg:px-20">
-      <div><h3 class="text-2xl font-semibold mb-2">Match ingridients to recipes</h3>
+      <div><h3 class="text-2xl font-semibold mb-2">Match ingredients to recipes</h3>
       <p>Draw cards and make sets worth the most coins to win the game.</p>
     </div>
     </div>
@@ -131,9 +139,9 @@
   <div class="max-w-2xl mx-auto text-center py-16 px-4 sm:py-48 sm:px-6 lg:px-8 text-white">
     <h2 class="text-3xl font-semibold text-5xl md:text-6xl mb-4">Get it now!</h2>
     <div class="points inline-block mt-6 font-medium">
-    <p class="check flex items-center text-xl leading-6 mb-4">108 card premium deck</p>
-    <p class="check flex items-center text-xl leading-6 mb-4">Rules cards for easy reference</p>
-    <p class="check flex items-center text-xl leading-6 mb-4">Approved by our nephew, George</p>
+    <p class="check flex items-center text-xl leading-6 mb-4 text-left">108 card premium deck</p>
+    <p class="check flex items-center text-xl leading-6 mb-4 text-left">Rules cards for easy reference</p>
+    <p class="check flex items-center text-xl leading-6 mb-4 text-left">Approved by our nephew, George</p>
     </div><br>
     <a href="#" class="buy mt-8 inline-block px-8 py-4 text-xl font-medium rounded-full text-gray-500 bg-white"> $30 <span class="text-black underline underline-offset-2 decoration-yellow pl-2">Buy Now</span> </a>
   </div>
