--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -112,7 +112,7 @@
   <div class="feature two max-w-6xl mx-auto md:flex mb-16 text-center overflow-hidden md:overflow-visible">
     <div class="container md:w-5/12 md:flex md:items-center px-8 lg:px-20 order-last">
       <div><h3 class="text-2xl font-semibold mb-2">Spoil the other chefs</h3>
-      <p>Use action cards to steal ingredients, leave bad reviews on Whelp, or pocket some extra coin.</p>
+      <p>Use action cards to steal ingredients, leave bad reviews on Welp, or pocket some extra coin.</p>
     </div>
     </div>
     <div class="md:w-7/12 art relative">
