--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap&text=↑→↓←" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Yes, Chef! The Cooking Card Game</title>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
@@ -253,7 +253,7 @@
 <div class="container max-w-5xl mx-auto text-lg font-medium px-8 mb-12">
   <div class="flex gap-5 pt-8">
     <div class="one grow">
-      <a class="block underline decoration-2 decoration-red-500 underline-offset-2 mb-4" href="#">About Us</a>
+      <a class="block underline decoration-2 decoration-red-500 underline-offset-2 mb-4" href="about.html">About Us</a>
       <a class="block underline decoration-2 decoration-red-500 underline-offset-2 mb-4" href="deck.html">The Deck</a>
       <a class="block underline decoration-2 decoration-red-500 underline-offset-2 mb-4" href="#">Contact</a>
 
