--- a/yes-chef/rules.html
+++ b/yes-chef/rules.html
@@ -35,15 +35,15 @@
 
   <div class="content mb-24 text-xl font-regular">
 
-    <div class="grid grid-cols-2 mb-8 border-t-2 border-[#5429FF] pt-8">
-      <a class="underline underline-offset-2 mb-2" href="#setup">Basic Game Setup</a>
-      <a class="underline underline-offset-2 mb-2" href="#started">Getting Started</a>
-      <a class="underline underline-offset-2 mb-2" href="#turn">Taking a Turn</a>
-      <a class="underline underline-offset-2 mb-2" href="#anatomy">The Anatomy of a Dish</a>
-      <a class="underline underline-offset-2 mb-2" href="#winning">Winning</a>
-      <a class="underline underline-offset-2 mb-2" href="#action">Action Cards</a>
-      <a class="underline underline-offset-2 mb-2" href="#gameplay">Advanced Gameplay</a>
-      <a class="underline underline-offset-2 mb-2" href="#faqs">FAQs</a>
+    <div class="md:grid grid-cols-2 mb-16 border-t-2 border-[#5429FF] pt-8">
+      <a class="underline underline-offset-2 mb-2 block" href="#setup">Basic Game Setup</a>
+      <a class="underline underline-offset-2 mb-2 block" href="#started">Getting Started</a>
+      <a class="underline underline-offset-2 mb-2 block" href="#turn">Taking a Turn</a>
+      <a class="underline underline-offset-2 mb-2 block" href="#anatomy">The Anatomy of a Dish</a>
+      <a class="underline underline-offset-2 mb-2 block" href="#winning">Winning</a>
+      <a class="underline underline-offset-2 mb-2 block" href="#action">Action Cards</a>
+      <a class="underline underline-offset-2 mb-2 block" href="#gameplay">Advanced Gameplay</a>
+      <a class="underline underline-offset-2 mb-2 block" href="#faqs">FAQs</a>
 
     </div>
 
