--- a/yes-chef/deck.html
+++ b/yes-chef/deck.html
@@ -17,7 +17,7 @@
   <div class="hero">
 
     <div class="tophat md:w-1/2 ml-auto text-sm text-center pt-3 pb-6 text-white mb-8">
-      <strong>Superfun Games</strong> presents <img src="images/logo-small-white.svg" class="inline" alt="">
+      <strong>Superfun Games</strong> presents <a href="index.html"><img src="images/logo-small-white.svg" class="inline" alt="Yes, Chef Logo"></a>
     </div>
 
   </div>
