--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap&text=↑→↓←" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Yes, Chef! The Cooking Card Game</title>
-  <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
   <!-- HTML Meta Tags -->
@@ -70,6 +70,7 @@
   </div>
 
   </div>
+
 
   <div class="play how-to md:absolute md:top-8 md:right-3/4 md:left-0 md:pt-14 z-0">
     <div class="container mx-auto text-center md:hidden">
@@ -144,6 +145,14 @@
     <p class="check flex items-center text-xl leading-6 mb-4 text-left">Approved by our nephew, George</p>
     </div><br>
     <a href="#" class="buy mt-8 inline-block px-8 py-4 text-xl font-medium rounded-full text-gray-500 bg-white"> $30 <span class="text-black underline underline-offset-2 decoration-yellow pl-2">Buy Now</span> </a>
+
+    <form class="w-full md:w-3/4 mt-8 hidden mx-auto" name="Yes, Chef! Emails" method="POST" data-netlify="true">
+      <div class="flex w-full gap-4">
+      <input class="rounded-full p-4 px-6 w-3/5 md:w-3/4 bg-white/80 text-black font-medium text-xl" placeholder="Your Email" type="email" name="email" />
+      <button class="rounded-full p-4 bg-white text-red w-2/5 md:w-1/4 font-semibold text-xl" type="submit">Send</button>
+      </div>
+      <p class="w-full mt-4">We're hoping to have decks ready soon, thanks for the interest! If you want to help/sale/talk, email <strong><a href="mailto:clark@superfun.team">clark@superfun.team</a></strong></p>
+  </form> 
   </div>
 </div>
 
@@ -169,8 +178,9 @@
               </button>
             </dt>
             <dd class="mt-2 pr-12 text-base text-gray-500" id="faq-0">
-              <p class="mb-4">Yes, Chef is a pick-up and play game for all ages. We like a "rule card" instead of a "rule book". The game should take just minutes to learn.</p>
-              <p class="">Full rules coming soon...</p>
+              <p class="mt-4 mb-4">Yes, Chef is a pick-up and play game for all ages. We like a "rule card" instead of a "rule book". The game should take just minutes to learn.</p>
+              <p class="mb-4">Inside each deck are two rule cards that lay out the overall goals and the phases of each turn. Keep them on the table as you play.</p>
+              <p>If you'd like a more complete ruleset, visit the <a class="underline underline-offset-2" href="rules.html">Rules Page</a>.</p>
             </dd>
           </div>
 
@@ -271,7 +281,7 @@
 
 <footer class="bg-[#FFF200]">
   <div class="max-w-5xl mx-auto flex justify-between py-8 pb-48 px-8">
-  <p>&copy; 2022 Superfun</p>
+  <p>&copy; 2023 Superfun</p>
   <p><a class="underline underline-offset-2" href="mailto:clark@superfun.team">Contact</a></p>
   </div>
 </footer>
@@ -290,6 +300,17 @@
 
    $( ".buy" ).on( "click", function() {
     $(this).html("Coming soon!");
+    $("form").show();
+    $( ".cta .buy" ).hide();
+    $('html, body').animate({
+      scrollTop: $('form').offset().top - 200
+    }, 1000);
+    return false;
+    });
+
+   $( ".cta .buy" ).on( "click", function() {
+    $(this).hide();
+    $("form").show();
     return false;
     });
 
