--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -49,7 +49,7 @@
   <div class="container mx-auto px-12 text-center">
     <h1 class="text-5xl md:text-6xl font-semibold mb-8">The <span id="rough">cooking</span><br> card game</h1>
     <p class="text-xl mb-8">Order up! Collect ingredients and match <br class="hidden lg:block">recipes in an epic chef battle.</p>
-    <a href="#buy" class="buy inline-block mb-4 text-xl font-semibold bg-black text-white rounded-full px-6 py-4 hover:scale-125 hover:rotate-2 transition-all">Buy Now</a>
+    <a href="#buy" class="buy inline-block mb-4 text-xl font-semibold bg-black text-white rounded-full px-6 py-4 hover:scale-125 hover:rotate-2 transition-all">Get Notified</a>
     <p class="font-medium mb-8"><a class="text-red" href="#">Print Deck</a> · <a class="text-red" href="deck.html">Card Reference</a> · <a class="text-red" href="rules.html">Rules</a></p>
   </div>
   </div>
@@ -144,14 +144,14 @@
     <p class="check flex items-center text-xl leading-6 mb-4 text-left">Rules cards for easy reference</p>
     <p class="check flex items-center text-xl leading-6 mb-4 text-left">Approved by our nephew, George</p>
     </div><br>
-    <a href="#" class="buy mt-8 inline-block px-8 py-4 text-xl font-medium rounded-full text-gray-500 bg-white"> $30 <span class="text-black underline underline-offset-2 decoration-yellow pl-2">Buy Now</span> </a>
+    <a href="#" class="buy mt-8 inline-block px-8 py-4 text-xl font-medium rounded-full text-gray-500 bg-white"> <span class="hidden">$30</span> <span class="text-black underline underline-offset-2 decoration-yellow pl-2">Get Notified</span> </a>
 
     <form class="w-full md:w-3/4 mt-8 hidden mx-auto" name="Yes, Chef! Emails" method="POST" data-netlify="true">
       <div class="flex w-full gap-4">
       <input class="rounded-full p-4 px-6 w-3/5 md:w-3/4 bg-white/80 text-black font-medium text-xl" placeholder="Your Email" type="email" name="email" />
-      <button class="rounded-full p-4 bg-white text-red w-2/5 md:w-1/4 font-semibold text-xl" type="submit">Send</button>
+      <button class="rounded-full p-4 bg-white text-red w-2/5 md:w-1/4 font-semibold text-xl" type="submit">Submit</button>
       </div>
-      <p class="w-full mt-4">We're hoping to have decks ready soon, thanks for the interest! If you want to help/sale/talk, email <strong><a href="mailto:clark@superfun.team">clark@superfun.team</a></strong></p>
+      <p class="w-full mt-4">We're hoping to have decks ready soon, thanks for the interest! If you want to help/sale/talk, contact <strong><a href="mailto:clark@superfun.team">clark@superfun.team</a></strong></p>
   </form> 
   </div>
 </div>
