--- a/yes-chef/rules.html
+++ b/yes-chef/rules.html
@@ -49,11 +49,11 @@
 
     <h2 id="setup" class="font-semibold text-4xl mb-4">Basic Game Setup</h2>
 
-    <p class="">Like a lot of card games, players gather around a central draw pile and a discard pile (called <strong>The Pantry</strong>). Something like this:</p>
+    <p class="">Like a lot of card games, players gather around a central draw pile and discard pile (called <strong>The Pantry</strong>). Something like this:</p>
 
-    <img class="rounded-2xl mb-8" src="images/instructions-table-layout.png" alt="">
+    <img class="md:rounded-2xl mb-8 max-w-[120%] -ml-[10%] md:max-w-[130%] md:-ml-[15%]" src="images/instructions-table-layout.png" alt="">
 
-    <p>Each chef works to collect and complete <strong>dish cards</strong> to earn coins. You may play a dish card from your hand into the space in front of you, and immediately start assembling the required <strong>ingredient cards</strong> to complete the dish.</p>
+    <p>Each chef works to collect and complete <strong>Dish Cards</strong> to earn coins. You may play a Dish Card from your hand into the space in front of you, and immediately start assembling the required <strong>Ingredient Cards</strong> to complete the Dish.</p>
 
     <p class="p-6 border-yellow-300 border-2 shadow-[6px_6px_0px_0px_rgba(253,224,71,0.8)]"><strong>But watch out!</strong> Other chefs are out to spoil you, and they can play <strong>action cards</strong> onto any dish in progress.</p> 
 
@@ -92,7 +92,7 @@
 
     <p>At the start of your turn, draw up to 7 cards into your hand. If the pantry pile is available, you may also draw from that pile.</p>
 
-    <p class="p-6 border-yellow-300 border-2 shadow-[6px_6px_0px_0px_rgba(253,224,71,0.8)]"><strong>Be smart!</strong> Draw your cards from the draw pile or pantry pile one-at-a-time, you never know if you'll pull a card that will suddently make an ingredient in the pantry a must-have. Good chefs are versitile!</p>
+    <p class="p-6 border-yellow-300 border-2 shadow-[6px_6px_0px_0px_rgba(253,224,71,0.8)]"><strong>Be smart!</strong> Draw your cards from the draw pile or pantry pile one-at-a-time, you never know if you'll pull a card that will suddenly make an ingredient in the pantry a must-have. Good chefs are versitile!</p>
 
     <p><strong>Always</strong> start your turn with 7 cards.</p>
 
@@ -142,7 +142,70 @@
 
     <h2 id="action" class="font-semibold text-4xl mb-4">Action Cards</h2>
 
-    <p>Complete info about special cards coming soon...</p>
+    <p class="mb-8">Use <strong>Action Cards</strong> to turn up the heat! Target other Chefs, give yourself more Coin, block to play defense. When an <strong>Action Card</strong> is played, discard it to the bottom of <strong>The Pantry</strong> card pile.</p>
+
+    <div class="action-card flex gap-8 mb-8">
+      <div class="w-1/4">
+      <img src="images/deck/hi-rez/094-action-cancel.png" alt="" class="drop-shadow-lg">
+      </div>
+      <div class="w-3/4">
+        Instantly play a <strong>Not So Fast</strong> card during anyone's turn to cancel the effect of any other Action Card. Stop another player from taking a coin from your Dish, or stop another player from dropping a Dish.
+      </div>
+    </div>
+
+    <div class="action-card flex gap-8 mb-8">
+      <div class="w-1/4">
+      <img src="images/deck/hi-rez/096-action-dropped-dish.png" alt="" class="drop-shadow-lg">
+      </div>
+      <div class="w-3/4">
+        Instantly play a <strong>Dropped Dish</strong> card during anyone's turn to remove any in-progress <strong>Dish</strong> from play. If a <strong>Dish</strong> is complete, it CANNOT be dropped. 
+      </div>
+    </div>
+
+    <div class="action-card flex gap-8 mb-8">
+      <div class="w-1/4">
+      <img src="images/deck/hi-rez/093-action-minus.png" alt="" class="drop-shadow-lg">
+      </div>
+      <div class="w-3/4">
+        Instantly play a <strong>Minus One Coin</strong> card during anyone's turn onto any <strong>Dish</strong> card. If a <strong>Dish</strong> is complete, it CANNOT be targeted by Action Cards. 
+      </div>
+    </div>
+
+    <div class="action-card flex gap-8 mb-8">
+      <div class="w-1/4">
+      <img src="images/deck/hi-rez/102-action-chef-peek.png" alt="" class="drop-shadow-lg">
+      </div>
+      <div class="w-3/4">
+        During your turn, play a <strong>Peek</strong> card to look through and take any cards in in the top five of either the <strong>Draw Pile</strong> or the <strong>Pantry</strong>.
+      </div>
+    </div>
+
+    <div class="action-card flex gap-8 mb-8">
+      <div class="w-1/4">
+      <img src="images/deck/hi-rez/082-action-coin.png" alt="" class="drop-shadow-lg">
+      </div>
+      <div class="w-3/4">
+        During your turn, play a <strong>+1 Coin</strong> card to add a coin to any active <strong>Dish</strong>. You can play a coin on your Dish or on a Dish from any other Chef.
+      </div>
+    </div>
+
+    <div class="action-card flex gap-8 mb-8">
+      <div class="w-1/4">
+      <img src="images/deck/hi-rez/098-action-switch.png" alt="" class="drop-shadow-lg">
+      </div>
+      <div class="w-3/4">
+        During your turn, play a <strong>Switch</strong> aloingside any <strong>Ingredient</strong> to substitute for any other Ingredient. For example, if recipe calls for Sugar, you can play Swap + Shrimp instead.
+      </div>
+    </div>
+
+    <div class="action-card flex gap-8 mb-8">
+      <div class="w-1/4">
+      <img src="images/deck/hi-rez/103-action-steal.png" alt="" class="drop-shadow-lg">
+      </div>
+      <div class="w-3/4">
+        During your turn, play a <strong>Raccoon</strong> card to steal a card, face down, from any other Chef. Discard the Raccoon at the bottom of the <strong>Pantry</strong>.
+      </div>
+    </div>
 
     <h2 id="gameplay" class="font-semibold text-4xl mb-4">Advanced Gameplay</h2>
 
