--- a/werewolf/index.html
+++ b/werewolf/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link rel="icon" href="/favicon.svg">
+  <link rel="icon" href="favicon.svg">
 
 <link href="assets/app.css?ede9bf106014804d112c" rel="stylesheet"></head>
 
@@ -25,5 +25,5 @@
   </div>
 
   
-<script src="/assets/app.js?ede9bf106014804d112c"></script></body>
+<script src="assets/app.js?ede9bf106014804d112c"></script></body>
 </html>
