--- a/leroy-and-lewis-the-game/index.html
+++ b/leroy-and-lewis-the-game/index.html
@@ -207,7 +207,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 </div>
 
-<a href="https://www.chudsbbq.com/collections" target="_blank" class="banner fixed bottom-12 -left-2 z-20 bg-black dark:bg-green-500 text-white dark:text-black rotate-2 pt-4 pb-2">
+<a href="https://www.chudsbbq.com/collections" target="_blank" class="banner fixed bottom-12 -left-2 z-20 bg-green-500 text-black rotate-2 pt-4 pb-2">
    <div class="text-2xl text-center font-bold h-8 whitespace-nowrap leading-6 overflow-hidden w-full">Happy Black Friday!!! * Happy Black Friday!!! * Happy Black Friday!!! * Happy Black Friday!!! * Happy Black Friday!!! * Happy Black Friday!!! * Happy Black Friday!!! * Happy Black Friday!!! * Happy Black Friday!!! *</div>
 </a>
 
