--- a/index.html
+++ b/index.html
@@ -123,57 +123,57 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
       <div class="relative flex overflow-x-hidden uppercase lg:-rotate-90">
         <div class=" animate-marquee whitespace-nowrap space-x-2 lg:space-x-4">
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-4xl leading-6 text-orange-500">•</span>
+          <span class="text-2xl leading-6 text-orange-500">☺</span>
           <span class="text-xl tracking-wide">Great Games</span>
-          <span class="text-4xl leading-6 text-primary">•</span>
+          <span class="text-2xl leading-6 text-primary">●</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-4xl leading-6 text-purple-300">•</span>
+          <span class="text-2xl leading-6 text-purple-300">⁂</span>
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-4xl leading-6 text-orange-500">•</span>
+          <span class="text-2xl leading-6 text-orange-500">●</span>
           <span class="text-xl tracking-wide">Great Games</span>
-          <span class="text-4xl leading-6 text-primary">•</span>
+          <span class="text-base leading-6 text-primary">◀</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-4xl leading-6 text-purple-300">•</span>
+          <span class="text-2xl leading-6 text-purple-300">☺</span>
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-4xl leading-6 text-orange-500">•</span>
+          <span class="text-2xl leading-6 text-orange-500">✿</span>
           <span class="text-xl tracking-wide">Great Games</span>
-          <span class="text-4xl leading-6 text-primary">•</span>
+          <span class="text-base leading-6 text-primary">◀</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-4xl leading-6 text-purple-300">•</span>
+          <span class="text-2xl leading-6 text-purple-300">⁂</span>
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-4xl leading-6 text-orange-500">•</span>
+          <span class="text-2xl leading-6 text-primary">●</span>
           <span class="text-xl tracking-wide">Great Games</span>
-          <span class="text-4xl leading-6 text-primary">•</span>
+          <span class="text-2xl leading-6 text-orange-500">☺</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-4xl leading-6 text-purple-300">•</span>
+          <span class="text-base leading-6 text-purple-300">◀</span>
 
         </div>
 
         <div class="absolute top-0 -right-20 animate-marquee2 whitespace-nowrap space-x-2 lg:space-x-4 pr-16">
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-4xl leading-6 text-orange-500">•</span>
+          <span class="text-2xl leading-6 text-orange-500">●</span>
           <span class="text-xl tracking-wide">Great Games</span>
-          <span class="text-4xl leading-6 text-primary">•</span>
+          <span class="text-base leading-6 text-primary">◀</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-4xl leading-6 text-purple-300">•</span>
+          <span class="text-2xl leading-6 text-purple-300">⁂</span>
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-4xl leading-6 text-orange-500">•</span>
+          <span class="text-2xl leading-6 text-primary">●</span>
           <span class="text-xl tracking-wide">Great Games</span>
-          <span class="text-4xl leading-6 text-primary">•</span>
+          <span class="text-2xl leading-6 text-orange-500">☺</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-4xl leading-6 text-purple-300">•</span>
+          <span class="text-base leading-6 text-purple-300">◀</span>
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-4xl leading-6 text-orange-500">•</span>
+          <span class="text-2xl leading-6 text-orange-500">●</span>
           <span class="text-xl tracking-wide">Great Games</span>
-          <span class="text-4xl leading-6 text-primary">•</span>
+          <span class="text-2xl leading-6 text-primary">•</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-4xl leading-6 text-purple-300">•</span>
+          <span class="text-2xl leading-6 text-purple-300">☺</span>
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-4xl leading-6 text-orange-500">•</span>
+          <span class="text-2xl leading-6 text-orange-500">●</span>
           <span class="text-xl tracking-wide">Great Games</span>
-          <span class="text-4xl leading-6 text-primary">•</span>
+          <span class="text-2xl leading-6 text-primary">◀</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-4xl leading-6 text-purple-300">•</span>
+          <span class="text-2xl leading-6 text-purple-300">✿</span>
 
         </div>
       </div>
