--- a/in-the-grass/index.html
+++ b/in-the-grass/index.html
@@ -147,7 +147,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           <span class="text-xl tracking-wide">playdate</span>
           <span class="text-2xl leading-6 text-orange-500">⁂</span>
           <span class="text-xl tracking-wide">In The Grass</span>
-          <span class="text-2xl leading-6 text-primary">☺</span>
+          <span class="text-2xl leading-6 text-orange-500">☺</span>
           <span class="text-xl tracking-wide">playdate</span>
           <span class="text-2xl leading-6 text-purple-300">●</span>
         </div>
