--- a/leroy-and-lewis-the-game/index.html
+++ b/leroy-and-lewis-the-game/index.html
@@ -147,7 +147,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           <span class="text-xl tracking-wide">cards</span>
           <span class="text-2xl leading-6 text-orange-500">⁂</span>
           <span class="text-xl tracking-wide">LeRoy and Lewis: The Game</span>
-          <span class="text-2xl leading-6 text-primary">☺</span>
+          <span class="text-2xl leading-6 text-orange-500">☺</span>
           <span class="text-xl tracking-wide">cards</span>
           <span class="text-2xl leading-6 text-purple-300">●</span>
         </div>
