--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           <span class="text-xl tracking-wide">Good Times!</span>
           <span class="text-2xl leading-6 text-purple-300">☺</span>
           <span class="text-xl tracking-wide">Gather Folks</span>
-          <span class="text-2xl leading-6 text-orange-500">✿</span>
+          <span class="text-2xl leading-6 text-orange-500">♦</span>
           <span class="text-xl tracking-wide">Great Games</span>
           <span class="text-base leading-6 text-primary">◀</span>
           <span class="text-xl tracking-wide">Good Times!</span>
@@ -173,7 +173,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           <span class="text-xl tracking-wide">Great Games</span>
           <span class="text-2xl leading-6 text-primary">◀</span>
           <span class="text-xl tracking-wide">Good Times!</span>
-          <span class="text-2xl leading-6 text-purple-300">✿</span>
+          <span class="text-2xl leading-6 text-purple-300">♦</span>
 
         </div>
       </div>
