--- a/leroy-and-lewis-the-game/index.html
+++ b/leroy-and-lewis-the-game/index.html
@@ -124,7 +124,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
       <div class="relative flex overflow-x-hidden uppercase lg:-rotate-90">
         <div class=" animate-marquee whitespace-nowrap space-x-2">
           <span class="text-xl tracking-wide">LeRoy and Lewis: The Game</span>
-          <span class="text-2xl leading-6 text-orange-500">✿</span>
+          <span class="text-2xl leading-6 text-orange-500">♦</span>
           <span class="text-xl tracking-wide">cards</span>
           <span class="text-2xl leading-6 text-primary">●</span>
           <span class="text-xl tracking-wide">LeRoy and Lewis: The Game</span>
@@ -143,7 +143,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           <span class="text-xl tracking-wide">cards</span>
           <span class="text-2xl leading-6 text-primary">●</span>
           <span class="text-xl tracking-wide">LeRoy and Lewis: The Game</span>
-          <span class="text-2xl leading-6 text-purple-300">✿</span>
+          <span class="text-2xl leading-6 text-purple-300">♦</span>
           <span class="text-xl tracking-wide">cards</span>
           <span class="text-2xl leading-6 text-orange-500">⁂</span>
           <span class="text-xl tracking-wide">LeRoy and Lewis: The Game</span>
