--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
         <a href="#menu" class="inline-block hidden p-2 flex items-center"><span class="material-symbols-outlined">menu</span></a>
 
-        <a href="https://www.chudsbbq.com/collections" class="button bg-primary rounded text-black text-xl lg:text-2xl font-bold px-4 py-3 md:py-2 hover:bg-black hover:text-white">Buy Games</a>
+        <a href="https://www.chudsbbq.com/collections" class="button bg-primary rounded-md text-black text-lg font-bold px-4 py-4 md:py-2 hover:bg-black hover:text-white">Buy Games</a>
 
       </div>  
       
