--- a/in-the-grass/index.html
+++ b/in-the-grass/index.html
@@ -113,7 +113,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
         <a href="#menu" class="inline-block hidden p-2 flex items-center"><span class="material-symbols-outlined">menu</span></a>
 
-        <a href="https://www.chudsbbq.com/collections" class="button bg-primary rounded text-black text-xl lg:text-2xl font-bold px-4 py-3 md:py-2 hover:bg-black hover:text-white">Buy Games</a>
+        <a href="https://www.chudsbbq.com/collections" class="button bg-primary rounded-md text-black text-lg font-bold px-4 py-4 md:py-2 hover:bg-black hover:text-white">Buy Games</a>
 
       </div>  
       
@@ -158,7 +158,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
     <div class="flex flex-col items-start justify-center p-8 border-b border-black dark:border-white overflow-hidden relative">
 
-      <p class="tag text-xl bg-[#FFF200] dark:bg-[#0F4263] text-black dark:text-white font-bold px-2 py-1 mb-2 mt-6"><a>#playdate</a></p>
+      <p class="tag text-xl bg-[#FFF200] dark:bg-[#0F4263] text-black dark:text-white font-bold px-0 py-0 mb-2 mt-6"><a>#playdate</a></p>
       <h2 class="text-4xl lg:text-5xl block z-10 font-bold mb-6">In The Grass</h2>
 
       <p class="mb-6 text-lg">A really dumb (and not at all finished) pulp game for the Playdate handheld console. Built in airports during delays.</p>
@@ -190,7 +190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     </div>
     <div class="col w-full space-y-4">
       <div class="buttons space-y-2 w-full mb-6">
-                <a href="https://superfun.itch.io/in-the-grass" class="button block w-full bg-[#FF5C00] dark:bg-[#FF3C00] text-white hover:bg-[#FF3C00] dark:text-white dark:hover:text-black dark:hover:bg-[#FFC800] px-3 py-2 text-lg text-center font-bold uppercase">
+                <a href="https://superfun.itch.io/in-the-grass" class="button rounded-md block w-full bg-[#FF5C00] dark:bg-[#FF3C00] text-white hover:bg-[#FF3C00] dark:text-white dark:hover:text-black dark:hover:bg-[#FFC800] px-3 py-4 text-xl lg:text-2xl text-center font-bold">
           Get it on Itch.io        </a>
                       </div>
       <p class="hidden flex items-center gap-3">
