button text size

--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -189,9 +189,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     </div>
     <div class="col w-full space-y-4">
       <div class="buttons space-y-2 w-full mb-6">
-                <a href="https://yeschef.superfun.games/" class="button rounded-md block w-full bg-[#FF5C00] dark:bg-[#FF3C00] text-white hover:bg-[#FF3C00] dark:text-white dark:hover:text-black dark:hover:bg-[#FFC800] px-3 py-4 text-xl lg:text-2xl text-center font-bold">
+                <a href="https://yeschef.superfun.games/" class="button rounded-md block w-full bg-[#FF5C00] dark:bg-[#FF3C00] text-white hover:bg-[#FF3C00] dark:text-white dark:hover:text-black dark:hover:bg-[#FFC800] px-3 py-5 text-[27px] text-center font-bold">
           Get Game        </a>
-                        <a href="https://yeschef.superfun.games/" class="button rounded-md block w-full bg-[#E9D3FF] dark:bg-[#493290] text-purple-950 dark:text-white hover:bg-purple-300 dark:hover:bg-[#E9D3FF] dark:hover:text-black px-3 py-4 text-xl lg:text-2xl text-center font-bold">
+                        <a href="https://yeschef.superfun.games/" class="button rounded-md block w-full bg-[#E9D3FF] dark:bg-[#493290] text-purple-950 dark:text-white hover:bg-purple-300 dark:hover:bg-[#E9D3FF] dark:hover:text-black px-3 py-5 text-[27px] text-center font-bold">
           Visit Site        </a>
               </div>
       <p class="hidden flex items-center gap-3">
