--- a/in-the-grass/index.html
+++ b/in-the-grass/index.html
@@ -190,7 +190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     </div>
     <div class="col w-full space-y-4">
       <div class="buttons space-y-2 w-full mb-6">
-                <a href="https://superfun.itch.io/in-the-grass" class="button rounded-md block w-full bg-[#FF5C00] dark:bg-[#FF3C00] text-white hover:bg-[#FF3C00] dark:text-white dark:hover:text-black dark:hover:bg-[#FFC800] px-3 py-4 text-xl lg:text-2xl text-center font-bold">
+                <a href="https://superfun.itch.io/in-the-grass" class="button rounded-md block w-full bg-[#FF5C00] dark:bg-[#FF3C00] text-white hover:bg-[#FF3C00] dark:text-white dark:hover:text-black dark:hover:bg-[#FFC800] px-3 py-5 text-[27px] text-center font-bold">
           Get it on Itch.io        </a>
                       </div>
       <p class="hidden flex items-center gap-3">
