--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     </div>
 
 
-    <div class="overflow-scroll p-8 border-t-2 border-black dark:border-white lg:border-t-0 pb-32 lg:pb-32">
+    <div class="overflow-scroll p-8 border-t border-black dark:border-white lg:border-t-0 pb-32 lg:pb-32">
       <div class="lg:columns-2 gap-12 md:gap-6">
         <p class="text-lg mb-8"><strong>Superfun Games</strong> is a family game shop in Austin, TX. Founded by Clark and Angie Wimberly (and loved by all), we make clever, quick card games and puzzles that prioritize group play over complex rules.</p>
 
