--- a/in-the-grass/index.html
+++ b/in-the-grass/index.html
@@ -158,7 +158,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
     <div class="flex flex-col items-start justify-center p-8 border-b border-black dark:border-white overflow-hidden relative">
 
-      <p class="tag text-xl bg-[#FFF200] dark:bg-[#0F4263] text-black dark:text-white font-bold px-0 py-0 mb-2 mt-6"><a>#playdate</a></p>
+      <p class="tag text-xl bg-[#FFF200] dark:bg-[#0F4263] text-black dark:text-white font-bold px-1 py-0 mb-2 mt-6">#playdate</p>
       <h2 class="text-4xl lg:text-5xl block z-10 font-bold mb-6">In The Grass</h2>
 
       <p class="mb-6 text-lg">A really dumb (and not at all finished) pulp game for the Playdate handheld console. Built in airports during delays.</p>
