--- a/yes-chef/index.html
+++ b/yes-chef/index.html
@@ -158,7 +158,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
     <div class="flex flex-col items-start justify-center p-8 border-b border-black dark:border-white overflow-hidden relative">
 
-      <p class="tag text-xl bg-[#FFF200] dark:bg-[#0F4263] text-black dark:text-white font-bold px-0 py-0 mb-2 mt-6"><a>#cards</a></p>
+      <p class="tag text-xl bg-[#FFF200] dark:bg-[#0F4263] text-black dark:text-white font-bold px-1 py-0 mb-2 mt-6">#cards</p>
       <h2 class="text-4xl lg:text-5xl block z-10 font-bold mb-6">Yes, Chef!</h2>
 
       <p class="mb-6 text-lg">Order up! Collect ingredients and match recipes in an epic chef battle. 108 card premium deck, approved by our nephew George.</p>
