--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -164,7 +164,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
     <h2 class="max-w-2xl text-3xl font-semibold tracking-tight text-balance sm:text-4xl">Superfun Secrets</h2>
     <p class="mt-4 text-sm/6 text-gray-900 dark:text-gray-300 text-center leading-tight">Be the first to know about new drops!<br>We will only ever email about cool stuff. We promise.</p>
     
-    <form class="mt-8 max-w-md mb-24" netlify>
+    <form class="mt-8 max-w-md mb-32" name="Superfun Secrets" data-netlify="true">
       <div class="flex gap-x-4">
         <label for="email-address" class="sr-only">Email address</label>
         <input id="email-address" type="email" name="email" required placeholder="Enter your email" autocomplete="email" class="min-w-0 flex-auto rounded-md bg-white px-6 py-4 text-base text-gray-900 border-2 border-gray-300 placeholder:text-gray-400 focus:border-indigo-600 sm:text-lg/6">
